--- a/deps/rust/crates/BUILD.swc_sourcemap-9.3.4.bazel
+++ b/deps/rust/crates/BUILD.swc_sourcemap-9.3.4.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "cc",
+    name = "swc_sourcemap",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,13 +35,23 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=cc",
+        "crate-name=swc_sourcemap",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.2.32",
+    version = "9.3.4",
     deps = [
-        "@crates_vendor__shlex-1.3.0//:shlex",
+        "@crates_vendor__base64-simd-0.8.0//:base64_simd",
+        "@crates_vendor__bitvec-1.0.1//:bitvec",
+        "@crates_vendor__bytes-str-0.2.7//:bytes_str",
+        "@crates_vendor__data-encoding-2.9.0//:data_encoding",
+        "@crates_vendor__debugid-0.8.0//:debugid",
+        "@crates_vendor__if_chain-1.0.2//:if_chain",
+        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
+        "@crates_vendor__serde-1.0.219//:serde",
+        "@crates_vendor__serde_json-1.0.142//:serde_json",
+        "@crates_vendor__unicode-id-start-1.3.1//:unicode_id_start",
+        "@crates_vendor__url-2.5.4//:url",
     ],
 )
