--- a/deps/rust/crates/BUILD.syn-2.0.106.bazel
+++ b/deps/rust/crates/BUILD.syn-2.0.106.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "swc_sourcemap",
+    name = "syn",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,30 +28,35 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "clone-impls",
+        "default",
+        "derive",
+        "extra-traits",
+        "fold",
+        "full",
+        "parsing",
+        "printing",
+        "proc-macro",
+        "visit",
+        "visit-mut",
+    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=swc_sourcemap",
+        "crate-name=syn",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "9.3.3",
+    version = "2.0.106",
     deps = [
-        "@crates_vendor__base64-simd-0.8.0//:base64_simd",
-        "@crates_vendor__bitvec-1.0.1//:bitvec",
-        "@crates_vendor__bytes-str-0.2.7//:bytes_str",
-        "@crates_vendor__data-encoding-2.9.0//:data_encoding",
-        "@crates_vendor__debugid-0.8.0//:debugid",
-        "@crates_vendor__if_chain-1.0.2//:if_chain",
-        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
-        "@crates_vendor__serde-1.0.219//:serde",
-        "@crates_vendor__serde_json-1.0.142//:serde_json",
-        "@crates_vendor__unicode-id-start-1.3.1//:unicode_id_start",
-        "@crates_vendor__url-2.5.4//:url",
+        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
+        "@crates_vendor__quote-1.0.40//:quote",
+        "@crates_vendor__unicode-ident-1.0.18//:unicode_ident",
     ],
 )
