--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -40,4 +40,5 @@ bazel_dep(name = "boringssl", version = "0.20250818.0", repo_name = "ssl")
 include("//build/deps:deps.MODULE.bazel")
 include("//build/deps:nodejs.MODULE.bazel")
 include("//build/deps:python.MODULE.bazel")
+include("//build/deps:rust.MODULE.bazel")
 include("//build/deps:v8.MODULE.bazel")
