--- a/src/workerd/jsg/BUILD.bazel
+++ b/src/workerd/jsg/BUILD.bazel
@@ -118,6 +118,7 @@ wd_cc_library(
     tags = ["no-clang-tidy"],
     deps = [
         ":exception",
+        ":exception_metadata_capnp",
         ":macro-meta",
         ":memory-tracker",
         ":meta",
@@ -219,6 +220,12 @@ wd_cc_library(
 wd_cc_capnp_library(
     name = "rtti_capnp",
     srcs = ["rtti.capnp"],
+    visibility = ["//visibility:public"],
+)
+
+wd_cc_capnp_library(
+    name = "exception_metadata_capnp",
+    srcs = ["exception-metadata.capnp"],
     visibility = ["//visibility:public"],
 )
 
