--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -20,11 +20,6 @@
     "noImplicitOverride": false,
     "verbatimModuleSyntax": false
   },
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts",
-    "scripts/**/*.ts",
-    "eslint.config.mjs"
-  ],
+  "include": ["src/**/*.ts", "test/**/*.ts", "scripts/**/*.ts", "eslint.config.mjs"],
   "exclude": ["test/types/**/*.ts", "src/worker/**", "node_modules", "**/*.mjs"]
 }
