--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -579,6 +579,14 @@ kj_test(
 )
 
 kj_test(
+    src = "streams-test.c++",
+    deps = [
+        "//src/workerd/io",
+        "//src/workerd/tests:test-fixture",
+    ],
+)
+
+kj_test(
     src = "system-streams-test.c++",
     deps = [
         "//src/workerd/io",
