--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -737,3 +737,9 @@ wd_test(
     args = ["--experimental"],
     data = ["identity-transform-stream-state-machine-test.js"],
 )
+
+wd_test(
+    src = "response-used-body-test.wd-test",
+    args = ["--experimental"],
+    data = ["response-used-body-test.js"],
+)
