[build] Define ISA extensions for all 1st party code
- Ideally we'd enable this on all C/C++ code, but that's difficult (see TODO
  comment)
- This should fix cloudflare/workerd#5977 by ensuring both places where we
  compute SQL-related hashes use hardware acceleration. To address this more
  generally, we'll need to make changes in capnp (capnproto/capnproto#2564)
- Also fixes a regression where crc-impl.c++ was compiled without CRC extensions
  enabled, which appears to have caused the software-based CRC32C implementation
  to be used
- Define -O3 properly for perfetto-tracing target on Windows, for consistency

--- a/src/workerd/tests/BUILD.bazel
+++ b/src/workerd/tests/BUILD.bazel
@@ -10,7 +10,13 @@ wd_cc_library(
         "//src/workerd/server:really_use_tcmalloc": ["WD_USE_TCMALLOC"],
         "//conditions:default": [],
     }),
-    tags = ["workerd-benchmark"],
+    # clang-tidy fails on this target when using clang-tidy-21 together with llvm-19 headers due to
+    # changes in how intrinsics are defined - disable clang-tidy here until we start using LLVM 21
+    # everywhere.
+    tags = [
+        "no-clang-tidy",
+        "workerd-benchmark",
+    ],
     visibility = ["//visibility:public"],
     deps = [
         "@capnp-cpp//src/kj:kj-test",
