avoid emitting unhandled rejections on DecompressionStream

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -301,6 +301,13 @@ wd_test(
 
 wd_test(
     size = "large",
+    src = "decompression-stream-unhandled-rejection-test.wd-test",
+    args = ["--experimental"],
+    data = ["decompression-stream-unhandled-rejection-test.js"],
+)
+
+wd_test(
+    size = "large",
     src = "htmlrewriter-test.wd-test",
     args = ["--experimental"],
     data = ["htmlrewriter-test.js"],
